@@ -14,6 +14,7 @@ import org.testng.annotations.*;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.not;
@@ -37,33 +38,36 @@ public class PostPetTest extends BaseTest {
         Thread.sleep(2000);
         PetClient petClient = new PetClient(ConfigReader.get("petBaseUri"));
 
-        PetRequest myPet = new PetRequest(
-                1,
-                new PetCategoryRequest(1,"Dog"),
-                new ArrayList<>(Arrays.asList("category string")),
-                "Max",
-                new ArrayList<>(Arrays.asList(new PetTagRequest(1,"tag string"))),
-                "true" );
+        PetRequest myPet = PetRequest.builder()
+                .id(1)
+                .name("Max")
+                .petCategoryRequest(new PetCategoryRequest(1, "Dog"))
+                .photoUrls(List.of("category string"))
+                .petTagRequests(List.of(new PetTagRequest(1, "tag string")))
+                .status("true")
+                .build();
 
-                Response response = petClient.createPet(myPet);
+        Response response = petClient.createPet(myPet);
                 response.then()
                         .statusCode(200)
                         .body("id", not(emptyOrNullString()))
                         .body("name", equalTo("Max"))
                         .body("tags.name[0]", equalTo("tag string"));
     }
+
     @Test
     public void postPet2() throws JsonProcessingException, InterruptedException {
         Thread.sleep(2000);
         PetClient petClient = new PetClient(ConfigReader.get("petBaseUri"));
 
-        PetRequest myPet = new PetRequest(
-                1,
-                new PetCategoryRequest(1,"Dog"),
-                new ArrayList<>(Arrays.asList("category string")),
-                "Max",
-                new ArrayList<>(Arrays.asList(new PetTagRequest(1,"tag string"))),
-                "true" );
+        PetRequest myPet = PetRequest.builder()
+                .id(1)
+                .name("Max")
+                .petCategoryRequest(new PetCategoryRequest(1, "Dog"))
+                .photoUrls(List.of("category string"))
+                .petTagRequests(List.of(new PetTagRequest(1, "tag string")))
+                .status("true")
+                .build();
 
                 Response response = petClient.createPet(myPet);
                 response.then()
@@ -77,13 +81,14 @@ public class PostPetTest extends BaseTest {
         Thread.sleep(2000);
         PetClient petClient = new PetClient(ConfigReader.get("petBaseUri"));
 
-        PetRequest myPet = new PetRequest(
-                1,
-                new PetCategoryRequest(1,"Dog"),
-                new ArrayList<>(Arrays.asList("category string")),
-                "Max",
-                new ArrayList<>(Arrays.asList(new PetTagRequest(1,"tag string"))),
-                "true" );
+        PetRequest myPet = PetRequest.builder()
+                .id(1)
+                .name("Max")
+                .petCategoryRequest(new PetCategoryRequest(1, "Dog"))
+                .photoUrls(List.of("category string"))
+                .petTagRequests(List.of(new PetTagRequest(1, "tag string")))
+                .status("true")
+                .build();
 
                 Response response = petClient.createPet(myPet);
                 response.then()
@@ -97,13 +102,14 @@ public class PostPetTest extends BaseTest {
         Thread.sleep(2000);
         PetClient petClient = new PetClient(ConfigReader.get("petBaseUri"));
 
-        PetRequest myPet = new PetRequest(
-                1,
-                new PetCategoryRequest(1,"Dog"),
-                new ArrayList<>(Arrays.asList("category string")),
-                "Max",
-                new ArrayList<>(Arrays.asList(new PetTagRequest(1,"tag string"))),
-                "true" );
+        PetRequest myPet = PetRequest.builder()
+                .id(1)
+                .name("Max")
+                .petCategoryRequest(new PetCategoryRequest(1, "Dog"))
+                .photoUrls(List.of("category string"))
+                .petTagRequests(List.of(new PetTagRequest(1, "tag string")))
+                .status("true")
+                .build();
 
                 Response response = petClient.createPet(myPet);
                 response.then()
